changed images routes

--- a/advanced_search.html
+++ b/advanced_search.html
@@ -11,7 +11,7 @@
 
     <header>
         <nav>
-            <a href="index.html"><img class="nav-logo" src="/assets/logo-Google.png" alt="nav-logo-google"></a>
+            <a href="index.html"><img class="nav-logo" src="logo-Google.png" alt="nav-logo-google"></a>
         </nav>
     </header>
 
