--- a/images.html
+++ b/images.html
@@ -18,15 +18,15 @@
 
     <main class="search-container">
         <figure class="logo-images">
-            <img src="/assets/logo-Google.png" alt="google-logo" class="logo">
+            <img src="logo-Google.png" alt="google-logo" class="logo">
             <span id="images-word">images</span>
         </figure>
 
         <form class="search-form" action="https://www.google.com/search">
             <div class="text-input">
-                <img class="search-icon" src="/assets/search-icon.svg" alt="search-icon">
+                <img class="search-icon" src="search-icon.svg" alt="search-icon">
                 <input type="text" name="q">
-                <img class="microphone-icon" src="/assets/microphone-icon.svg" alt="microphone-icon">
+                <img class="microphone-icon" src="microphone-icon.svg" alt="microphone-icon">
                 <input type="hidden" value="isch" name="tbm">
             </div>
 
