--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     </header>
 
     <main class="search-container">
-        <img src="/assets/logo-Google.png" alt="google-logo" class="logo">
+        <img src="logo-Google.png" alt="google-logo" class="logo">
         <form class="search-form" action="https://www.google.com/search">
             <div class="text-input">
-                <img class="search-icon" src="/assets/search-icon.svg" alt="search-icon">
+                <img class="search-icon" src="search-icon.svg" alt="search-icon">
                 <input type="text" name="q">
-                <img class="microphone-icon" src="/assets/microphone-icon.svg" alt="microphone-icon">
+                <img class="microphone-icon" src="microphone-icon.svg" alt="microphone-icon">
             </div>
             <div class="buttons">
                 <div>
